:art: fixed positioning and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,10 @@ body {
     background-size: cover;
     height: 150vh;
     font-family: 'Roboto Slab', sans-serif;
+}
 
+.big-text {
+    font-size: 4rem;
+    line-height: 1;
+    margin: 0 2rem;
 }
